# Cologne-Open-Data-FastMcp

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  Dockerfile  README.md  pyproject.toml  run_local.sh
src/: koeln_press
src/koeln_presse/: __init__.py  models.py  rss_client.py  server.py  utils.py
tests/: test_rss_client.py  test_tools.py
